@@ -1,3 +1,13 @@
+ags (3.0.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: migrated to Gtk3
+	* TODO:JK: migrated AgsOscServer to GIO sockets
+	* TODO:JK: migrated AgsServer to Libsoup XMLRPC
+	* TODO:JK: migrated AgsThread to GThread API
+	* TODO:JK: migrated AgsTurtle and AgsFunction to GRegex
+	* TODO:JK: implemented introspection support
+
 ags (2.4.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
